# axum_template

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml  holla.txt  justfile
.sqlx/: query-25553a33c47a0d2e79320685ee70fd3f61dfd0ba59d2e05673af3bdcbd060c47.json  query-df53d0f394fd92317323d5be990a27e0e9139a3bdad154ade02087719cc0b263.json
migrations/: 20250324151447_initial_setup.up.sql  20250324151511_create_users_table.up.sql
src/: api_config.rs  dtos.rs  main.rs  routes.rs  services.rs  utils.rs
src/api_config/: db_config.rs
src/dtos/: users_dto.rs
src/routes/: config.rs  users.rs  users_handler.rs
src/routes/users/: user_tests.rs
src/services/: users_service.rs
src/utils/: api_error.rs  app_error.rs  models.rs  tracing_setup.rs
src/utils/api_error/: swagger_responses.rs
