[package]
name = "axum_template"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["http2", "tracing"] }
dotenvy = "0.15.7"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors", "compression-br", "compression-deflate", "compression-gzip", "trace"] }
tracing = "0.1.41"
tracing-bunyan-formatter = "=0.3.10"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
ulid = { version = "1.2.1", features = ["postgres", "serde"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid", "chrono", "debug", "ulid"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.0", features = ["axum", "cache", "debug", "reqwest"] }

[profile.dev]
rpath = true

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
#opt-level = "z"
#strip = "debuginfo"
strip = "symbols"
rpath = true
